css: optimsed css of intro

--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -40,24 +40,26 @@
         </a>
     </div>
 </div>
-<div class="social-media-and-contact">
-    <div class="intro-line"></div>
-    <div class="intro-contact-symbols">
-        <a target="_blank" rel="noopener noreferrer" href="https://github.com/GloriaSchaffarczyk">
-            <img src="../../assets/intro-icon-github.png" [alt]="translationService.translate('INTRO.GITHUB_ALT')">
-        </a>
-        <a href="mailto:gloria.schaffarczyk@gmail.com">
-            <img src="../../assets/intro-icon-email.png" [alt]="translationService.translate('INTRO.EMAIL_ALT')">
-        </a>
-        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/gloria-schaffarczyk-bb2a88205">
-            <img src="../../assets/intro-icon-linkedin.png" [alt]="translationService.translate('INTRO.LINKEDIN_ALT')">
-        </a>
-        <span class="mailto-long">
-            <a href="mailto:gloria.schaffarczyk@gmail.com">gloria.schaffarczyk&#64;gmail.com</a>
-        </span>
+<div class="intro-bottom-elements">
+    <div class="social-media-and-contact">
+        <div class="intro-line"></div>
+        <div class="intro-contact-symbols">
+            <a target="_blank" rel="noopener noreferrer" href="https://github.com/GloriaSchaffarczyk">
+                <img src="../../assets/intro-icon-github.png" [alt]="translationService.translate('INTRO.GITHUB_ALT')">
+            </a>
+            <a href="mailto:gloria.schaffarczyk@gmail.com">
+                <img src="../../assets/intro-icon-email.png" [alt]="translationService.translate('INTRO.EMAIL_ALT')">
+            </a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/gloria-schaffarczyk-bb2a88205">
+                <img src="../../assets/intro-icon-linkedin.png" [alt]="translationService.translate('INTRO.LINKEDIN_ALT')">
+            </a>
+            <span class="mailto-long">
+                <a href="mailto:gloria.schaffarczyk@gmail.com">gloria.schaffarczyk&#64;gmail.com</a>
+            </span>
+        </div>
     </div>
-</div>
-<div class="scroll-indicator">
-    <span>{{ translationService.translate('INTRO.SCROLL.DOWN') }}</span>
-    <div class="arrow">&#x2193;</div>
+    <div class="scroll-indicator">
+        <span>{{ translationService.translate('INTRO.SCROLL.DOWN') }}</span>
+        <div class="arrow">&#x2193;</div>
+    </div>
 </div>
