--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -5,13 +5,19 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  margin-top: 150px;
+  margin-top: 100px;
   font-size: $font-size-base;
-  background-image: url("../../assets/red_shade_01.png");
-  background-size: 620px 620px;
-  background-repeat: no-repeat;
-  background-position: 1650px -30px;
   scroll-margin-top: $anchor-padding;
+}
+
+.background-image {
+  position: absolute;
+  top: 1000px;
+  right: -200px;
+  width: 472px;
+  height: auto;
+  z-index: 2;
+  opacity: 0.9;
 }
 
 .about-me-left {
@@ -74,24 +80,6 @@
 }
 
 // Media Queries
-@media (max-width: 1700px) {
-  .about-me-section {
-    background-position: 1450px -30px;
-  }
-}
-
-@media (max-width: 1600px) {
-  .about-me-section {
-    background-position: 1250px -30px;
-  }
-}
-
-@media (max-width: 1450px) {
-  .about-me-section {
-    background-position: 1150px -30px;
-  }
-}
-
 @media (max-width: $breakpoint-lg) {
   .about-me-left h1 {
     font-size: 4.5rem;
@@ -100,8 +88,7 @@
 
 @media (max-width: 1200px) {
   .about-me-section {
-    background-size: 1500px 480px;
-    background-position: 650px 0px;
+    margin-top: 150px;
   }
 
   .about-me-right {
@@ -120,8 +107,6 @@
 @media (max-width: $breakpoint-md) {
   .about-me-section {
     padding: 0 $padding-medium 0 $padding-medium;
-    margin-top: $padding-large;
-    background-position: 150px 0px;
 
     > .about-me-left {
       padding: 0;
@@ -135,7 +120,6 @@
 @media (max-width: $breakpoint-sm) {
   .about-me-section {
     padding: 0 $padding-small 0 $padding-small;
-    margin-top: $padding-medium;
 
     > .about-me-left {
       padding: 0;
@@ -172,7 +156,6 @@
   .about-me-section {
     font-size: $font-size-xs;
     background-position: 50px 0px;
-    margin-top: $padding-small;
     padding: 0 $padding-small;
   }
 }
