--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -36,3 +36,6 @@
         <button class="arrowRight" (click)="slideRight()">→</button>
     </div>
 </div>
+<div class="background-image">
+    <img src="../../assets/green_shade_02.png" alt="">
+  </div>
