--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -6,11 +6,31 @@
   margin-top: 150px;
   box-sizing: border-box;
   overflow: visible;
-  background-image: url("../../assets/red_shade_02.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: -400px 300px;
   scroll-margin-top: $anchor-padding;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("../../assets/red_shade_02.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: -500px 300px;
+    opacity: 0.7;
+    z-index: -1;
+  }
+}
+
+.contact-form-wrapper {
+  width: 100%;
+  max-width: 1920px;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+  position: relative;
 }
 
 .contact-form-section {
@@ -237,7 +257,7 @@ textarea::placeholder {
   }
 }
 
-// Media Queries //
+// Media Queries
 @media (max-width: 1500px) {
   .contact-line {
     width: 35%;
@@ -363,5 +383,11 @@ textarea::placeholder {
 
   form[_ngcontent-ng-c1513643726], .contact-form-left p, .custom-checkbox {
     font-size: $font-size-xs;
+  }
+}
+
+@media (min-width: 1921px) {
+  .contact-form-section {
+    padding: 10px 0;
   }
 }
