--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,27 +1,29 @@
 <div class="footer-section">
     <div class="footer-line"></div>
-    <div class="footer-logo-and-social">
-        <a href="#header">
-            <img src="../../assets/Logo_gs_02.png" alt="Gloria Schaffarczyk logo">
-        </a>
-        <p>© Gloria Schaffarczyk 2024</p>
-        <div class="footer-social-media-links">
-            <a target="_blank" rel="noopener noreferrer" href="https://github.com/GloriaSchaffarczyk">
-                <img src="../../assets/intro-icon-github.png" alt="GitHub logo linking to Gloria's GitHub profile">
+    <div class="footer-wrapper">
+        <div class="footer-logo-and-social">
+            <a href="#header">
+                <img src="../../assets/Logo_gs_02.png" alt="Gloria Schaffarczyk logo">
             </a>
-            <a href="mailto:gloria.schaffarczyk@gmail.com">
-                <img src="../../assets/intro-icon-email.png" alt="Envelope icon for contacting Gloria via email">
-            </a>
-            <a target="_blank" rel="noopener noreferrer"
-                href="https://www.linkedin.com/in/gloria-schaffarczyk-bb2a88205">
-                <img src="../../assets/intro-icon-linkedin.png"
-                    alt="LinkedIn logo linking to Gloria's LinkedIn profile">
+            <p>© Gloria Schaffarczyk 2024</p>
+            <div class="footer-social-media-links">
+                <a target="_blank" rel="noopener noreferrer" href="https://github.com/GloriaSchaffarczyk">
+                    <img src="../../assets/intro-icon-github.png" alt="GitHub logo linking to Gloria's GitHub profile">
+                </a>
+                <a href="mailto:gloria.schaffarczyk@gmail.com">
+                    <img src="../../assets/intro-icon-email.png" alt="Envelope icon for contacting Gloria via email">
+                </a>
+                <a target="_blank" rel="noopener noreferrer"
+                    href="https://www.linkedin.com/in/gloria-schaffarczyk-bb2a88205">
+                    <img src="../../assets/intro-icon-linkedin.png"
+                        alt="LinkedIn logo linking to Gloria's LinkedIn profile">
+                </a>
+            </div>
+        </div>
+        <div class="footer-imprint">
+            <a routerLink="/imprint">
+                <p>{{ translationService.translate('FOOTER.IMPRINT') }}</p>
             </a>
         </div>
-    </div>
-    <div class="footer-imprint">
-        <a routerLink="/imprint">
-            <p>{{ translationService.translate('FOOTER.IMPRINT') }}</p>
-        </a>
     </div>
 </div>
