--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,18 +2,17 @@
 
 // Footer Section Styles
 .footer-section {
-  height: 20vh;
+  height: 300px;
   position: relative;
-  padding: $padding-medium $padding-large;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-content: stretch;
-  justify-content: center;
-  align-items: stretch;
-  z-index: 50;
-  max-width: 1920px; 
+  width: 100vw;
   margin: 0 auto;
+  background-color: $color-dark;
+  z-index: 50;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
 
   // Footer Line
   .footer-line {
@@ -29,11 +28,12 @@
 
   // Logo and Social Media Section
   .footer-logo-and-social {
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-content: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 
     p {
@@ -89,6 +89,21 @@
   }
 }
 
+.footer-wrapper {
+  width: 100%;
+  max-width: 1920px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  padding: $padding-medium $padding-large;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: stretch;
+  justify-content: center;
+  align-items: stretch;
+  box-sizing: border-box;
+}
+
 // Media Queries
 @media (max-width: $breakpoint-md) {
   .footer-section {
@@ -104,5 +119,11 @@
     align-content: center;
     justify-content: center;
     align-items: center;
+  }
+}
+
+@media (min-width: 1921px) {
+  .footer-wrapper {
+    padding: 50px 0px;
   }
 }
