--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -4,20 +4,27 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-  max-width: 100vw;
-  width: 100%;
   margin-top: 100px;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   overflow: visible;
   scroll-margin-top: $anchor-padding;
-  background-image: url("../../assets/red_shade_02.png"),
-    url("../../assets/green_shade_01.png");
-  background-size: 900px 800px, 500px 500px;
-  background-repeat: no-repeat, no-repeat;
-  background-position: -550px 550px, -200px 4px;
   z-index: -1;
+  max-width: 1920px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.background-image {
+  position: absolute;
+  top: 3150px;
+  left: -250px;
+  width: 400px;
+  height: auto;
+  z-index: -1;
+  opacity: 0.7;
 }
 
 .portfolio-head {
@@ -148,8 +155,6 @@ h2 {
 @media (max-width: $breakpoint-lg) {
   .portfolio-section {
     text-align: center;
-    background-size: 900px 800px, 500px 500px;
-    background-position: -600px 700px, -200px 200px; /* Individuelle Positionen für beide Bilder */
   }
 
   .portfolio-line {
@@ -200,6 +205,12 @@ h2 {
   .project-container {
     padding: 0 $padding-medium;
   }
+
+  .background-image {
+    top: 3150px;
+    left: -550px;
+    width: 200px;
+  }
 }
 
 @media (max-width: 683px) {
@@ -225,7 +236,6 @@ h2 {
 @media (max-width: 480px) {
   .portfolio-section {
     font-size: $font-size-sm;
-    background-position: -650px 600px, -350px 200px;
   }
 
   .portfolio-line {
@@ -284,5 +294,11 @@ h2 {
 
   .portfolio-head > p {
     margin-block-end: 0;
+  }
+}
+
+@media (min-width: 1921px) {
+  .project-container {
+    padding: 0;
   }
 }
