javascript main.ts: added animations to sections; implemented in home.component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="header-wrapper">
     <div class="header-left">
       <!-- Logo -->
-      <a href="#header">
+      <a href="">
         <img src="../../assets/Logo_gs_02.png" alt="Website logo: Gloria Schaffarczyk" id="logo" />
       </a>
       </div>
