--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -35,7 +35,7 @@
                 fill="#FF3F79" />
         </svg>
         }
-        <a href="#contact" class="button-link">
+        <a (click)="navigateToSection('contact')" class="button-link">
             {{ translationService.translate('INTRO.BUTTON.LETS_TALK') }}
         </a>
     </div>
