--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -125,7 +125,7 @@
       </div>
     </div>
     <div class="arrow-wrapper">
-      <a href="#intro">
+      <a (click)="navigateToSection('intro')">
         <img
           [src]="arrowSrc"
           [alt]="translationService.translate('CONTACT.ARROW_ALT')"
