--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -7,7 +7,7 @@
 
   
     h2 {
-      font-size: $font-size-xxl;
+      font-size: $font-size-xl;
       margin-block-start: 0.1em;
       margin-block-end: 0.1em;
     }
