--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="footer-wrapper">
         <div class="footer-logo-and-social">
             <a href="#header">
-                <img src="../../assets/Logo_gs_02.png" alt="Gloria Schaffarczyk logo">
+                <img src="../../assets/Logo_gs_02.png" alt="Gloria Schaffarczyk logo" class="logo">
             </a>
             <p>© Gloria Schaffarczyk 2024</p>
             <div class="footer-social-media-links">
