--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -50,8 +50,10 @@
             <a href="mailto:gloria.schaffarczyk@gmail.com">
                 <img src="../../assets/intro-icon-email.png" [alt]="translationService.translate('INTRO.EMAIL_ALT')">
             </a>
-            <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/gloria-schaffarczyk-bb2a88205">
-                <img src="../../assets/intro-icon-linkedin.png" [alt]="translationService.translate('INTRO.LINKEDIN_ALT')">
+            <a target="_blank" rel="noopener noreferrer"
+                href="https://www.linkedin.com/in/gloria-schaffarczyk-bb2a88205">
+                <img src="../../assets/intro-icon-linkedin.png"
+                    [alt]="translationService.translate('INTRO.LINKEDIN_ALT')">
             </a>
             <span class="mailto-long">
                 <a href="mailto:gloria.schaffarczyk@gmail.com">gloria.schaffarczyk&#64;gmail.com</a>
