--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -115,6 +115,7 @@
     justify-content: center;
     align-items: center;
     word-break: break-word;
+    gap: 8px;
   }
 }
 
@@ -140,6 +141,27 @@
 
   .footer-wrapper {
     padding: 0;
+  }
+
+  .logo {
+    width: 140px;
+    height: auto;
+  }
+}
+
+@media (max-width: 320px) {
+  .logo img {
+    width: 100px;
+    height: auto;
+  }
+
+  .footer-social-media-links > a > img {
+    height: 42px;
+    width: auto;
+  }
+
+  p {
+    font-size: 0.9rem;
   }
 }
 
