--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -1,9 +1,8 @@
 <div class="testimonial-container">
     <div class="single-testimonial">
         <div class="quote-container">
-            <img src="../../assets/testimonial-quotation-mark.png" 
-                 alt="quotation-mark-image"
-                 class="quotation-mark-image">
+            <img src="../../assets/testimonial-quotation-mark.png" alt="quotation-mark-image"
+                class="quotation-mark-image">
             <p class="quote">
                 {{ translationService.translate(testimonials[currentTestimonial].quoteKey) }}
             </p>
@@ -16,8 +15,8 @@
         </div>
         <div class="testimonial-line" [class.animate]="true"></div>
         <div class="testimonial-img">
-            <img [src]="testimonials[currentTestimonial].imageSrc" 
-                 [alt]="translationService.translate(testimonials[currentTestimonial].authorKey)">
+            <img [src]="testimonials[currentTestimonial].imageSrc"
+                [alt]="translationService.translate(testimonials[currentTestimonial].authorKey)">
         </div>
     </div>
 
@@ -28,7 +27,7 @@
         <div class="dots">
             @for (testimonial of testimonials; track $index) {
             <span [class.active-dot]="currentTestimonial === $index"
-                  [class.inactive-dot]="currentTestimonial !== $index">
+                [class.inactive-dot]="currentTestimonial !== $index">
             </span>
             }
         </div>
@@ -38,4 +37,4 @@
 </div>
 <div class="background-image">
     <img src="../../assets/green_shade_02.png" alt="">
-  </div>
+</div>
